--- a/scss/style.scss
+++ b/scss/style.scss
@@ -44,11 +44,11 @@
   './components/subway',
   './components/toc',
   './components/collapse',
-  './components/nav_book',
   './components/buttons_links',
-  './components/nav_site',
+  './components/navigation',
   './components/views',
   './components/header',
+  './components/footer',
   './components/containers'
   ;
 
