--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -10,8 +10,8 @@ html.bcbb-theme {
     }
   }
 
-  // primary site nav
-  nav ul.navbar-nav {
+  // main menu nav
+  nav.menu--main ul.navbar-nav {
     a.nav-link {
       color: $colorTextLink;
         &:hover,
@@ -23,6 +23,33 @@ html.bcbb-theme {
           color: $colorTextLink;
         }
     }
+  }
+
+  // breadcrumbs navigation
+  .bcbb-breadcrumbs {
+    border-bottom: 1px solid var(--bs-gray-200);
+    margin-bottom: 2em;
+  }
+
+  // footer nav
+  nav.menu--footer ul.navbar-nav {
+    display: block;
+      @include responsive() {
+        columns: 2;
+        gap: 4rem;   
+      }
+      a.nav-link {
+        color: var(--bs-gray-100);
+        text-decoration: underline;
+          &:hover,
+          &:focus {
+            color: var(--bs-gray-200);
+          }
+          &:active,
+          &:visited {
+            color: var(--bs-gray-100);
+          }
+      }
   }
 
   // book navigation
@@ -62,5 +89,6 @@ html.bcbb-theme {
       margin-top: 3.5em;
     }
   }
+
 
 }
