--- a/scss/overrides/_bootstrap.scss
+++ b/scss/overrides/_bootstrap.scss
@@ -17,4 +17,12 @@
     text-transform: none;
     letter-spacing: normal;
   }
+
+  // remove extra padding in regions
+  .region-sidebar-first,
+  .region-sidebar-second,
+  .region-footer,
+  .region-content {
+    padding: 0;
+  }
 }
