Issue #20: Change appearance of placeholder text

--- a/css/ck5style.css
+++ b/css/ck5style.css
@@ -14994,6 +14994,21 @@ a > .ck-content code {
   margin-left: 0;
   margin-right: 0;
 }
+.ck-content .bcbb-theme input::-webkit-input-placeholder {
+  color: var(--bs-gray-600);
+}
+.ck-content .bcbb-theme input::-moz-placeholder {
+  color: var(--bs-gray-600);
+}
+.ck-content .bcbb-theme input:-ms-input-placeholder {
+  color: var(--bs-gray-600);
+}
+.ck-content .bcbb-theme input::-ms-input-placeholder {
+  color: var(--bs-gray-600);
+}
+.ck-content .bcbb-theme input::placeholder {
+  color: var(--bs-gray-600);
+}
 .ck-content html.bcbb-theme a img.site-logo {
   height: 50px;
   max-height: 70px;
