--- a/scss/style.scss
+++ b/scss/style.scss
@@ -45,6 +45,7 @@
   './components/toc',
   './components/collapse',
   './components/buttons_links',
+  './components/fields',
   './components/navigation',
   './components/views',
   './components/header',
