--- a/css/ck5style.css
+++ b/css/ck5style.css
@@ -15009,13 +15009,13 @@ a > .ck-content code {
 .ck-content .bcbb-theme input::placeholder {
   color: var(--bs-gray-600);
 }
-.ck-content html.bcbb-theme a img.site-logo {
-  height: 50px;
-  max-height: 70px;
+.ck-content html.bcbb-theme a.site-logo img {
+  height: 30px;
+  max-height: 40px;
 }
 @media only screen and (min-width: 576px) {
-  .ck-content html.bcbb-theme a img.site-logo {
-    height: 70px;
+  .ck-content html.bcbb-theme a.site-logo img {
+    height: 40px;
   }
 }
 .ck-content html.bcbb-theme nav.menu--main ul.navbar-nav a.nav-link, .ck-content html.bcbb-theme nav.menu--main ul.navbar-nav .media-library-view--widget .view-header a, .ck-content .media-library-view--widget .view-header html.bcbb-theme nav.menu--main ul.navbar-nav a {
