--- a/scss/components/_search.scss
+++ b/scss/components/_search.scss
@@ -228,7 +228,7 @@
       
       &:hover,
       &:focus {
-        background-color: $colorInputBorder;
+        background-color: var(--bs-gray-200);
       }
     }
   }
