--- a/css/style.css
+++ b/css/style.css
@@ -15834,7 +15834,7 @@ h1.page-title::after, .page-title.h1::after {
   border-radius: 0 var(--bs-btn-border-radius) var(--bs-btn-border-radius) 0;
 }
 .block-bcbb-search form .btn:hover, .block-bcbb-search form button.link:hover, .block-bcbb-search form .button:hover, .block-bcbb-search form .node-preview-container .node-preview-backlink:hover, .node-preview-container .block-bcbb-search form .node-preview-backlink:hover, .block-bcbb-search form .btn:focus, .block-bcbb-search form button.link:focus, .block-bcbb-search form .button:focus, .block-bcbb-search form .node-preview-container .node-preview-backlink:focus, .node-preview-container .block-bcbb-search form .node-preview-backlink:focus {
-  background-color: rgb(217, 217, 217);
+  background-color: var(--bs-gray-200);
 }
 
 input.bcbb-search-submit-icon {
