Issue #20: Add some padding to subway nav links

--- a/scss/components/_subway.scss
+++ b/scss/components/_subway.scss
@@ -59,7 +59,7 @@ ul.bb-subway {
     a {
       display: block;
       margin-left: 1.5em;
-      padding-bottom: .65em;
+      padding-bottom: 1.15em;
       z-index: inherit;
       line-height: 1;
       text-decoration: none;
