issue #20 make border radius specific to search button

--- a/css/ck5style.css
+++ b/css/ck5style.css
@@ -13411,6 +13411,42 @@ a > .ck-content code {
   width: 100% !important;
   max-width: 100% !important;
 }
+.ck-content details.card:not([open]) summary.card-header, .ck-content .view-media-library .media-library-views-form .media-library-item--grid details.views-field-rendered-entity:not([open]) summary.card-header, .ck-content .media-library-selection details.media-library-item.media-library-item--grid:not([open]) summary.card-header, .ck-content details.card:not([open]) .view-media-library .media-library-views-form .media-library-item--grid summary.views-field-media-library-select-form, .ck-content .view-media-library .media-library-views-form .media-library-item--grid details.card:not([open]) summary.views-field-media-library-select-form, .ck-content .view-media-library .media-library-views-form .media-library-item--grid details.views-field-rendered-entity:not([open]) summary.views-field-media-library-select-form, .ck-content .media-library-selection .view-media-library .media-library-views-form details.media-library-item.media-library-item--grid:not([open]) summary.views-field-media-library-select-form, .ck-content .view-media-library .media-library-views-form .media-library-selection details.media-library-item.media-library-item--grid:not([open]) summary.views-field-media-library-select-form,
+.ck-content details.card:not([open]) .view-media-library .media-library-views-form .media-library-item--grid summary.views-field-media-bulk-form,
+.ck-content .view-media-library .media-library-views-form .media-library-item--grid details.card:not([open]) summary.views-field-media-bulk-form,
+.ck-content .view-media-library .media-library-views-form .media-library-item--grid details.views-field-rendered-entity:not([open]) summary.views-field-media-bulk-form,
+.ck-content .media-library-selection .view-media-library .media-library-views-form details.media-library-item.media-library-item--grid:not([open]) summary.views-field-media-bulk-form,
+.ck-content .view-media-library .media-library-views-form .media-library-selection details.media-library-item.media-library-item--grid:not([open]) summary.views-field-media-bulk-form {
+  border-radius: var(--bs-card-inner-border-radius) var(--bs-card-inner-border-radius) var(--bs-card-inner-border-radius) var(--bs-card-inner-border-radius);
+  border-bottom: 0;
+}
+.ck-content .accordion details {
+  overflow: unset;
+}
+.ck-content .accordion details[open] .accordion-button {
+  color: var(--bs-accordion-active-color);
+  background-color: var(--bs-accordion-active-bg);
+}
+.ck-content .accordion details[open] .accordion-button::after {
+  background-image: var(--bs-accordion-btn-active-icon);
+  -webkit-transform: var(--bs-accordion-btn-icon-transform);
+          transform: var(--bs-accordion-btn-icon-transform);
+}
+.ck-content .accordion details:not([open]) {
+  border-bottom: 0;
+}
+.ck-content .accordion details:not([open]) .accordion-button {
+  color: var(--bs-accordion-btn-color);
+  background-color: var(--bs-accordion-btn-bg);
+  border: unset;
+  border-bottom-right-radius: var(--bs-accordion-border-radius);
+  border-bottom-left-radius: var(--bs-accordion-border-radius);
+}
+.ck-content .accordion details:not([open]) .accordion-button::after {
+  background-image: var(--bs-accordion-btn-active-icon);
+  -webkit-transform: unset;
+          transform: unset;
+}
 .ck-content .alert-dismissible .close {
   color: #000;
 }
@@ -14717,7 +14753,11 @@ a > .ck-content code {
   padding-left: 2em;
   background-position: 0.5em center;
 }
-.ck-content .bcbb-search-wrapper .search-bb-search-block .views-exposed-form .form--inline .form-actions input.btn, .ck-content .bcbb-search-wrapper .search-bb-search-block .views-exposed-form .form--inline .form-actions input.button, .ck-content .bcbb-search-wrapper .search-bb-search-block .views-exposed-form .form--inline .form-actions .node-preview-container input.node-preview-backlink, .ck-content .node-preview-container .bcbb-search-wrapper .search-bb-search-block .views-exposed-form .form--inline .form-actions input.node-preview-backlink {
+.ck-content .bcbb-search-wrapper .search-bb-search-block .views-exposed-form .form--inline .form-actions input[value=search].btn, .ck-content .bcbb-search-wrapper .search-bb-search-block .views-exposed-form .form--inline .form-actions input[value=search].button, .ck-content .bcbb-search-wrapper .search-bb-search-block .views-exposed-form .form--inline .form-actions .node-preview-container input[value=search].node-preview-backlink, .ck-content .node-preview-container .bcbb-search-wrapper .search-bb-search-block .views-exposed-form .form--inline .form-actions input[value=search].node-preview-backlink,
+.ck-content .bcbb-search-wrapper .search-bb-search-block .views-exposed-form .form--inline .form-actions input[value=Search].btn,
+.ck-content .bcbb-search-wrapper .search-bb-search-block .views-exposed-form .form--inline .form-actions input[value=Search].button,
+.ck-content .bcbb-search-wrapper .search-bb-search-block .views-exposed-form .form--inline .form-actions .node-preview-container input[value=Search].node-preview-backlink,
+.ck-content .node-preview-container .bcbb-search-wrapper .search-bb-search-block .views-exposed-form .form--inline .form-actions input[value=Search].node-preview-backlink {
   border-radius: 0 var(--bs-border-radius) var(--bs-border-radius) 0;
 }
 @media only screen and (min-width: 992px) {
